assets/main.scss
---
---

$text-color: #444444;
$anchor-text-color: #578a2c;
$background-color: #ffffff;
$svg-color: #812a2a;

body {
	font-family: proxima-nova, serif;
	line-height: 1.4;
	color: $text-color;
	background-color: $background-color;
}

header,
main {
	padding: 0 20px;
}

/*** wrapper div for both header and main ***/
.wrapper {
	margin: 12vh auto;
	display: flex;
    flex-flow: column wrap;
}

/*** anchor tags ***/
a:link,
a:visited,
a:hover,
a:active {
	color: $anchor-text-color;
	text-decoration: none;
}

a:hover {
	// color: $anchor-text-color;
	text-decoration: underline;
}


/*** main content list ***/
.main-list-item {
	font-weight: bold;
	font-size: 1.2em;
	margin: 0.8em 0;
}

/* override the left margin added by font awesome for the main content list,
since it must be aligned with the content */
.fa-ul.main-list {
	margin-left: 0;
}

/* list icons */
.main-list-item-icon {
	width: 36px;
	color: $text-color;
}

.header-container {
	display: flex;
    flex-flow: row;
    justify-content: space-between;
	align-content: flex-end;
}

.icon-wrapper-outer {
	display: flex;
    flex-flow: row wrap;
    justify-content: center;

	margin-top: 20px;
}

.icon-wrapper-inner {
	display: flex;
    flex-flow: column wrap;
	align-content: center;
	justify-content: center;

	width: 24px;
	height: 24px;
	margin: 5px;
}

.icon {
	opacity: 75%;
}

.icon:hover {
	height:21px;
}

/*** logo ***/
.logo-container {
	text-align: center;
}

.logo {
	width: 96px;
	height: 96px;
	display: inline-block;
	background-size: cover;
	border-radius: 50%;
	-moz-border-radius: 50%;
	border: 2px solid $background-color;
	box-shadow: 0 0 0 3px $text-color;
}

/*** author ***/
.author-container h1 {
	font-size: 1.9em;
	margin-top: 0;
	margin-bottom: 0;
	text-align: left;
}

/*** tagline ***/
.tagline-container p {
	font-size: 1.3em;
	text-align: center;
	margin-bottom: 2em;
}

svg {
	color: $svg-color;
}

/******/
hr {
	border: 0;
	height: 1px;
	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -moz-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -ms-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -o-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
}

/*** footer ***/
footer {
	position: fixed;
	bottom: 0;
	right: 0;
	height: 20px;
}

.poweredby {
	font-family: "Arial Narrow", Arial;
	font-size: 0.6em;
	line-height: 0.6em;
	padding: 0 5px;
}

/*** media queries ***/
/* X-Small devices (phones, 480px and up) */
@media (min-width: 480px) {
	/* wrapper stays 480px wide past 480px wide and is kept centered */
	.wrapper {
		width: 460px;
		// margin: 10% auto 0 auto;
	}
}

/* All other devices (768px and up) */
@media (min-width: 768px) {
	/* past 768px the layout is changed and the wrapper has a fixed width of 680px
	to accomodate both the header column and the content column */
	.wrapper {
		margin: 15vh auto;
		width: 560px; /*680px*/
	}

	// /* the header column stays left and has a dynamic width with all contents
	// aligned right */
	// header {
	// 	float: left;
	// 	width: 28%;
	// 	text-align: right;
	// }

	// .author-container h1,
	// .logo-container,
	// .tagline-container p {
	// 	text-align: right;
	// }

	// main {
	// 	width: 46%;
	// 	margin-left: 54%;
	// 	padding: 0;
	// }
}

